--- a/index.html
+++ b/index.html
@@ -353,6 +353,6 @@
       </div>
     </main>
 
-    <script src="javascript/index.js" type="text/javascript"></script>
+    <script src="bundle.js" type="text/javascript"></script>
   </body>
 </html>
