--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       <div class="main-section">
         <section class="section input-section">
           <select id="favorite-city-dropdown" class="favorite-city-dropdown">
-            <option value>-- Favorite Cities --</option>
+            <option value="">-- Favorite Cities --</option>
             <option value="vancouver">Vancouver</option>
             <!-- When user saves cities, it should be populated here -->
           </select>
@@ -225,6 +225,7 @@
 	c-1.894,0.996-4.108-0.613-3.746-2.722l2.065-12.042c0.144-0.837-0.134-1.692-0.742-2.285l-8.749-8.528
 	c-1.532-1.494-0.687-4.096,1.431-4.403l12.091-1.757c0.841-0.122,1.568-0.65,1.944-1.412l5.407-10.956
 	C22.602,0.567,25.338,0.567,26.285,2.486z"
+                  id="fav"
                 />
               </svg>
             </button>
